--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -36,4 +36,4 @@
 //@import "components/date_picker/default.scss";
 //@import "components/date_picker/default.date.scss";
 //@import "components/date_picker/default.time.scss";
-//@import "slider/slider.scss";
+@import "swiper/swiper.scss";
